# SunnyLand

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  Tiled地图解析思路.md  resources.rc
assets/config/: config.json
assets/data/: save.json
assets/maps/: actor.tsj  level1.tmj  level2.tmj  prop.tsj  tileset.tsj
src/: main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/component/: animation_component.cpp  animation_component.h  audio_component.cpp  audio_component.h  collider_component.cpp  collider_component.h  component.h  health_component.cpp  health_component.h  parallax_component.cpp  parallax_component.h  physics_component.cpp  physics_component.h  sprite_component.cpp  sprite_component.h  tile_type.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp  transform_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/object/: game_object.cpp  game_object.h
src/engine/physics/: collider.h  collision.cpp  collision.h  physics_engine.cpp  physics_engine.h
src/engine/render/: animation.cpp  animation.h  camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  level_loader.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h
src/engine/ui/state/: ui_hover_state.cpp  ui_hover_state.h  ui_normal_state.cpp  ui_normal_state.h  ui_pressed_state.cpp  ui_pressed_state.h  ui_state.h
src/engine/utils/: alignment.h  math.h
src/game/component/: ai_component.cpp  ai_component.h  player_component.cpp  player_component.h
src/game/component/ai_behavior/: ai_behavior.h  jump_behavior.cpp  jump_behavior.h  patrol_behavior.cpp  patrol_behavior.h  updown_behavior.cpp  updown_behavior.h
src/game/component/player_state/: climb_state.cpp  climb_state.h  dead_state.cpp  dead_state.h  fall_state.cpp  fall_state.h  hurt_state.cpp  hurt_state.h  idle_state.cpp  idle_state.h  jump_state.cpp  jump_state.h  player_state.cpp  player_state.h  walk_state.cpp  walk_state.h
src/game/component/state/: fall_state.cpp  fall_state.h  idle_state.cpp  jump_state.cpp  player_state.h  walk_state.cpp
src/game/data/: session_data.cpp  session_data.h
src/game/scene/: end_scene.cpp  end_scene.h  game_scene.cpp  game_scene.h  helps_scene.cpp  helps_scene.h  menu_scene.cpp  menu_scene.h  title_scene.cpp  title_scene.h
src/game/scenes/: game_scene.cpp  game_scene.h
